slight front-end improvements

--- a/Local Tier List/wwwroot/index.html
+++ b/Local Tier List/wwwroot/index.html
@@ -11,11 +11,11 @@
     <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 
-<body>
+<body style="background-color: #3b0967; justify-content: center; align-items: center">
 
     <div class="status-bar-safe-area"></div>
 
-    <div id="app">Loading...</div>
+    <div id="app" style="color: white; margin: auto; justify-content: center">Loading TierLists...</div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
